[package]
name = "bmp390-rs"
version = "0.4.0"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["embedded-hal", "pressure", "sensor", "altitude", "async"]
description = "Async driver for the BMP390 pressure sensor that supports both I2C and SPI"
repository = "https://github.com/EmilNorden/bmp390-rs"
categories = ["aerospace", "asynchronous", "embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal-async = { version = "1.0.0", optional = true}
embedded-hal = {version = "1.0.0" }
heapless = "0.8.0"
uom = { version = "0.37.0", default-features = false, features = ["si", "f32"], optional = true }

[dev-dependencies]
tokio = { version = "1.47.1", features = ["macros", "rt", "time"]}

[features]
default = ["async"]
async = ["dep:embedded-hal-async"]
uom = ["dep:uom"]
